--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: http://localhost:1313/
 languageCode: en
 defaultContentLanguage: en
-title: Closer to Reality -- A blog about data
+title: Close to Reality -- A blog about data
 preserveTaxonomyNames: yes
 enableRobotsTXT: yes
 enableEmoji: yes
